[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/PCPanel.gd" type="Script" id=1]
[ext_resource path="res://Scenes/CloseButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/default_theme.tres" type="Theme" id=4]

[node name="PCPanel" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -152.0
margin_right = 320.0
margin_bottom = 136.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 38 )
text = "PCC_NAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Construct" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -184.0
margin_top = -48.0
margin_right = -8.0
margin_bottom = -8.0
text = "CONSTRUCT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewPlanet" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -184.0
margin_top = -96.0
margin_right = -8.0
margin_bottom = -56.0
text = "VIEW_PLANET"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -48.0
margin_right = 432.0
margin_bottom = -8.0
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="ScrollContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 419.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -2
__meta__ = {
"_edit_lock_": true
}

[node name="CloseButton" parent="." instance=ExtResource( 3 )]

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 44.0
margin_top = 40.0
margin_right = 192.0
margin_bottom = 172.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="."]
margin_left = 264.0
margin_top = 96.0
margin_right = 356.0
margin_bottom = 124.0
value = 1.0
rounded = true
allow_greater = true

[connection signal="pressed" from="Construct" to="." method="_on_Construct_pressed"]
[connection signal="pressed" from="ViewPlanet" to="." method="_on_ViewPlanet_pressed"]
[connection signal="close_button_pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_SpinBox_value_changed"]
